KAlarm

=== Version 1.1.8 --- 30 November 2004 ===
Fix random limit on expired alarm discard time if stepping with spinbox buttons.

=== Version 1.1.7 (KDE 3.3.2) --- 27 November 2004 ===
Fix KAlarm button on message windows to make it always display main window.
Show scheduled times, not reminder times, in alarm list and system tray tooltip.
Fix time-to-alarm column in main window not always updating every minute.

=== Version 1.1.6 (KDE 3.3.1) --- 30 September 2004 ===
Prevent crash if kalarmui.rc is missing.
Unsuppress Quit warning message box if default answer is Cancel quit.
Prevent blind copy to self of email alarms via KMail when bcc is deselected.

=== Version 1.1.5 --- 1 September 2004 ===
Show erroneous control in alarm edit dialog when an error message is displayed.
Make alarm edit dialog always appear on current desktop.
Make weekly/monthly/yearly recurrences scheduled from command line correspond
  correctly to the start date.
Fix start date for monthly/yearly recurrences scheduled from the command line.
Fix DCOP triggerEvent() call to not reschedule alarm if it isn't due yet.

=== Version 1.1.4 --- 21 August 2004 ===
Fix errors when altering or cancelling deferrals of expired recurrences.
Fix message window size not fitting message (bug introduced in 1.1.3).
Fix invisible widget taking keyboard focus when tabbing into time spinboxes.
Prevent recurrence exceptions list taking keyboard focus if it's empty.

=== Version 1.1.3 (KDE 3.3) --- 28 July 2004 ===
Fix dialog sizing the first time KAlarm is run.

=== Version 1.1.2 (KDE 3.3 beta2) --- 11 July 2004 ===
Fix hangup in interactions with alarm daemon introduced in version 1.1.1.
Only tick Alarms Enabled menu items once alarms have actually been enabled.
Fix build for "./configure --without-arts".

=== Version 1.1.1 (KDE 3.3 beta1) --- 20 June 2004 ===
Output error message and disable alarms if can't register with alarm daemon.
Exit if error in alarm calendar name configuration.