@@ -1,7 +1,7 @@
 /*
- *  spinbox2.cpp  -  spin box with extra pair of spin buttons (for QT3)
+ *  spinbox2.cpp  -  spin box with extra pair of spin buttons (for Qt 3)
  *  Program:  kalarm
- *  (C) 2001, 2002 by David Jarvie  software@astrojar.org.uk
+ *  (C) 2001, 2002, 2004 by David Jarvie <software@astrojar.org.uk>
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -25,9 +25,11 @@
 
 #include <qstyle.h>
 #include <qobjectlist.h>
+#include <qapplication.h>
 
 #include "spinbox2.moc"
 
+int SpinBox2::mReverseLayout = -1;
 
 SpinBox2::SpinBox2(QWidget* parent, const char* name)
 	: QFrame(parent, name)
@@ -38,7 +40,6 @@ SpinBox2::SpinBox2(QWidget* parent, const char* name)
 	spinbox = new SB2_SpinBox(0, 1, 1, this, spinboxFrame);
 	init();
 }
-
 
 SpinBox2::SpinBox2(int minValue, int maxValue, int step, int step2, QWidget* parent, const char* name)
 	: QFrame(parent, name),
@@ -55,6 +56,8 @@ SpinBox2::SpinBox2(int minValue, int maxValue, int step, int step2, QWidget* par
 
 void SpinBox2::init()
 {
+	if (mReverseLayout < 0)
+		mReverseLayout = QApplication::reverseLayout() ? 1 : 0;
 	spinbox->setSelectOnStep(false);    // default
 	updown2->setSelectOnStep(false);    // always false
 	setFocusProxy(spinbox);
@@ -112,9 +115,6 @@ void SpinBox2::valueChange()
 
 void SpinBox2::stepPage(int step)
 {
-//	bool focus = spinbox->selectOnStep() && updown2->hasFocus();
-//	if (focus)
-//		spinbox->setFocus();    // make displayed text be selected, as for stepping with the spinbox buttons
 	if (abs(step) == updown2->lineStep())
 		spinbox->setValue(updown2->value());
 	else
@@ -129,8 +129,6 @@ void SpinBox2::stepPage(int step)
 	bool focus = spinbox->selectOnStep() && updown2->hasFocus();
 	if (focus)
 		spinbox->selectAll();
-//	if (focus)
-//		updown2->setFocus();
 }
 
 // Called when the widget is about to be displayed.
@@ -169,8 +167,8 @@ void SpinBox2::arrange()
 void SpinBox2::getMetrics() const
 {
 	QRect rect = updown2->style().querySubControlMetrics(QStyle::CC_SpinWidget, updown2, QStyle::SC_SpinWidgetButtonField);
-	xUpdown2 = rect.left();
-	wUpdown2 = updown2->width() - xUpdown2;
+	xUpdown2 = mReverseLayout ? 0 : rect.left();
+	wUpdown2 = updown2->width() - rect.left();
 	xSpinbox = spinbox->style().querySubControlMetrics(QStyle::CC_SpinWidget, spinbox, QStyle::SC_SpinWidgetEditField).left();
 	wGap = 0;
 
