@@ -2,6 +2,7 @@ KAlarm
 
 === Version 1.1.8 --- 30 November 2004 ===
 Fix random limit on expired alarm discard time if stepping with spinbox buttons.
+Fix time spin box layout for right-to-left languages.
 
 === Version 1.1.7 (KDE 3.3.2) --- 27 November 2004 ===
 Fix KAlarm button on message windows to make it always display main window.
